[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Post-Quantum Cryptography
pqcrypto = "0.14.0"
pqcrypto-traits = "0.3.5"

# Memory Safety
zeroize = "1.5"

# WebAssembly Integration
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fix WebAssembly Randomness Issue
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]